[package]
name = "rust_bindings"
version = "0.1.0"
authors = ["Naveen Piedy <nav.bugs.thepoet@gmail.com>"]
edition = "2018"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
crossbeam = "0.7.3"

[lib]
name = "pixel_array_manipulation"
crate-type = ["cdylib", "rlib"]